BuildHughes/translation-tool/inputs/source_meta/objects/Field_Default__mdt.object
<CustomObject>
    <fields>
        <fullName>FieldDefault__c</fullName>
        <label>FieldDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue__c</fullName>
        <label>FieldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObjectType__c</fullName>
        <label>sObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field_Default</label>
    <pluralLabel>Field_Defaults</pluralLabel>
</CustomObject>